--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="input-group mb-3">
             <input type="text" id="taskInput" class="form-control" placeholder="Add new task">
             <button class="btn btn-primary" onclick="addTask()">Add Task</button>
+            <button class="btn btn-danger" onclick="deleteAllTasks()">Delete All</button>
         </div>
         <ul id="taskList" class="list-group"></ul>
     </div>
@@ -60,6 +61,11 @@
             saveTasks();
         }
 
+        function deleteAllTasks() {
+            document.getElementById("taskList").innerHTML = "";
+            localStorage.removeItem("tasks");
+        }
+
         function saveTasks() {
             let tasks = [];
             document.querySelectorAll("#taskList li").forEach(task => {
@@ -91,3 +97,4 @@
     </script>
 </body>
 </html>
+
