--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             let li = document.createElement("li");
             li.className = "list-group-item d-flex justify-content-between align-items-center task-card";
             li.innerHTML = `
-                <span>${taskText}</span>
+                <span onclick="editTask(this)">${taskText}</span>
                 <div>
                     <button class="btn btn-success btn-sm" onclick="completeTask(this)">Complete</button>
                     <button class="btn btn-danger btn-sm" onclick="deleteTask(this)">Delete</button>
@@ -56,14 +56,26 @@
         }
 
         function deleteTask(button) {
-            let taskItem = button.parentElement.parentElement;
-            taskItem.remove();
-            saveTasks();
+            if (confirm("Are you sure you want to delete this task?")) {
+                let taskItem = button.parentElement.parentElement;
+                taskItem.remove();
+                saveTasks();
+            }
         }
 
         function deleteAllTasks() {
-            document.getElementById("taskList").innerHTML = "";
-            localStorage.removeItem("tasks");
+            if (confirm("Are you sure you want to delete all tasks?")) {
+                document.getElementById("taskList").innerHTML = "";
+                localStorage.removeItem("tasks");
+            }
+        }
+
+        function editTask(taskSpan) {
+            let newText = prompt("Edit task:", taskSpan.textContent);
+            if (newText !== null && newText.trim() !== "") {
+                taskSpan.textContent = newText.trim();
+                saveTasks();
+            }
         }
 
         function saveTasks() {
@@ -86,7 +98,7 @@
                     li.classList.add("text-decoration-line-through");
                 }
                 li.innerHTML = `
-                    <span>${task.text}</span>
+                    <span onclick="editTask(this)">${task.text}</span>
                     <div>
                         <button class="btn btn-success btn-sm" onclick="completeTask(this)">Complete</button>
                         <button class="btn btn-danger btn-sm" onclick="deleteTask(this)">Delete</button>
@@ -98,3 +110,5 @@
 </body>
 </html>
 
+           
+                   
